my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/991216-4.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/991216-4.c:15:5: error: call to undeclared library function 'exit' with type 'void (int) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   15 |     exit (0);
      |     ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/991216-4.c:15:5: note: include the header <stdlib.h> or explicitly provide a declaration for 'exit'
1 error generated.
